nav-top position fix and overflow repetition deleted

--- a/styles/sass/partials/_indexStyles.scss
+++ b/styles/sass/partials/_indexStyles.scss
@@ -15,7 +15,7 @@ header {
     top: 0;
 }
 .is-hidden {
-    top: -20rem;
+    top: -25rem;
 }  
 
 .navContainer {
