--- a/styles/sass/partials/_topography.scss
+++ b/styles/sass/partials/_topography.scss
@@ -25,7 +25,6 @@ body {
     font-family: $generalFont;
     line-height: 140%;
     color: $purple;
-    overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5 {
